--- a/src/android/qrscanner.gradle
+++ b/src/android/qrscanner.gradle
@@ -3,8 +3,8 @@ repositories {
 }
 
 dependencies {
-    implement 'com.journeyapps:zxing-android-embedded:3.3.0'
-    implement 'com.android.support:appcompat-v7:23.1.0'
+    implementation 'com.journeyapps:zxing-android-embedded:3.3.0'
+    implementation 'com.android.support:appcompat-v7:23.1.0'
 }
 
 android {
